# Open-GL

./: CONTRIBUTING.md  Code Of Conduct.md  Cube.cpp  LabAssignment1.cbp  LabAssignment1.depend  README.md  dda.c  main.cpp  midpoint_circle.c  midpoint_circle.cpp  midpoint_line.c  point.c  point.cpp
Exam-Sums/algorithms/: circle  dda  dda.cpp  dda_p1.cpp  input.txt  midpoint  midpoint.cpp  midpoint_circle.cpp  midpoint_line.cpp
Exam-Sums/basic_shapes/: colouredSquare.cpp  hello  helloWorld.cpp  point  point.cpp  polygon  polygon.cpp  square  triangle  triangle.cpp
Exam-Sums/transformations/: trans  trans.cpp  transformation.cpp
Installation_Instructions/: codeblocks.doc
Installation_Instructions/Anjuta/: .anjuta_sym_db.db  configure.ac
Installation_Instructions/Anjuta/.anjuta/session/: anjuta.session  dock-layout.xml
Installation_Instructions/Anjuta/src/: Makefile.am  main.c
Labs/Lab1/: firstWindow.cpp  main.cpp
Labs/Lab2/: dda.cpp  midpoint_line.cpp  point  point.cpp
Labs/Lab3/: Cube.cpp  midpoint_circle.cpp
Labs/Lab4/: coloured_cube.cpp  ellipse.cpp
Labs/Lab5 /: trans  transformations.cpp
Source_Code/: Cube  Cube.cpp  dda  dda.cpp  firstWindow  firstWindow.c  firstWindow.cpp  main  midpoint_line.cpp  mpcircle  mpline  point
Trial_Codes/: Chess.cpp  chess
Tutorials/: GLHello1.cpp  GLPolygon.cpp  GLTriangle.cpp  gl  hello  polygon  triangle
